--- a/djangobile/templates/generic_xhtml.html
+++ b/djangobile/templates/generic_xhtml.html
@@ -14,15 +14,18 @@
     {% for link in rel_links %}
     <link rel="{{ link.rel }}" href="{{ link.href }}" {% if link.title %}title="{{ link.title }}"{% endif %} {% if link.type %}title="{{ link.type }}"{% endif %} />
     {% endfor %}
-<!--
+    {% if style %}
     <style type="text/css">
+    {{ style }}
     </style>
-
-    <script type="text/javascript" src="">
+    {% endif %}
+    {% if script %}
+    <script type="text/javascript" language="javasscript">
+    {{ script }}
     </script>
--->
+    {% endif %}
 </head>
 <body>
 
 </body>
-</html
+</html>
